# myoarm-lambda-ep

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
paper/: SUBMISSION-CHECKLIST.md  build.sh  cover_letter.md  manuscript.md  manuscript.tex  preamble.tex  references.bib  suggested_reviewers.md
paper/tex/: .gitignore  (+2 more)
results/: franka_claim_map.json  franka_condition_sweep_summary.json  franka_contribution_table.json  franka_e1_summary.json  franka_e2_e3_summary.json  franka_e4_summary.json  franka_e5_summary.json  franka_ef_summary.json  franka_main_results.json  franka_master_summary.json  franka_phase_alignment_summary.json  franka_phase_d_summary.json  franka_phase_f_summary.json  franka_secondary_results.json  paper_ef_table.md  paper_main_table.md
scripts/: aggregate_condition_sweeps.py  aggregate_e2_e3.py  aggregate_e4.py  aggregate_e5.py  aggregate_ef.py  aggregate_phase_d.py  aggregate_results.py  analyze_phase_alignment.py  analyze_tau_sys_cartesian.py  collect_myo_cfc_data.py  collect_myo_cfc_lambda_data.py  experiment_franka_2a.py  experiment_franka_2b.py  experiment_franka_2c.py  experiment_franka_2d.py  experiment_franka_e1.py  experiment_franka_e2.py  experiment_franka_e3.py  experiment_franka_e4.py  experiment_franka_e5.py  experiment_franka_ef.py  experiment_franka_f0.py  experiment_franka_f1.py  experiment_franka_f2.py  experiment_franka_f3.py  experiment_franka_f4.py  experiment_franka_f5.py  experiment_myo_p10_baseline.py  experiment_myo_p11_neural.py  experiment_myo_p12_kinematics.py  experiment_myo_p13_analysis.py  (+32 more)
(+884 files in other folders)
