[project]
name = "lnn-arm-control"
version = "0.1.0"
description = "LNN-based robot arm control: CfC/NCP on OpenManipulator-X and SO-101"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mujoco>=3.7.0",
    "ncps>=1.0.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "wandb>=0.26.0",
]
