[project]
name = "neuro-arm-control"
version = "0.1.0"
description = "Neuro-inspired robot arm control with Franka Panda simulation experiments and future transfer to a newly developed real robot arm"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mujoco>=3.7.0",
    "ncps>=1.0.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "torch>=2.11.0",
    "wandb>=0.26.0",
]
